--- a/solution/index.html
+++ b/solution/index.html
@@ -35,16 +35,33 @@
                         </select>
                 </div>
                 <div class="box">
-                    <p>Movie Type</p>
-                    <input type="checkbox" name="type1" id="Comedy" value="Comedy">
-                    <label for="Comedy">Comedy</label>
-                    <input type="checkbox" name="type2" id="Action" value="Action">
-                    <label for="Action">Action</label>
-                    <input type="checkbox" name="type3" id="Romance" value="Romance">
-                    <label for="Romance">Romance</label>
-
+                    <div>
+                        <p>Movie Type</p>
+                        <input type="checkbox" name="type1" id="Comedy" value="Comedy">
+                        <label for="Comedy">Comedy</label>
+                        <input type="checkbox" name="type2" id="Action" value="Action">
+                        <label for="Action">Action</label>
+                        <input type="checkbox" name="type3" id="Romance" value="Romance">
+                        <label for="Romance">Romance</label>
+                    </div>
+                    <div>
+                        <p>Gender</p>
+                        <input type="radio" name="gender" id="gender" value="Male">
+                        <label for="gender">Male</label>
+                        <input type="radio" name="gender" id="gender" value="Female">
+                        <label for="gender">Female</label>
+                        <input type="radio" name="gender" id="gender" value="Other">
+                        <label for="gender">Other</label>
+                    </div>
                 </div>
-                <div class="box"></div>
+                <div class="box">
+                    <label for="feedback">Feedback</label>
+                    <br>
+                    <textarea  name="Feedback" id="feedback" placeholder="any comment"></textarea>
+                </div>
+                <div class="box">
+                    <input type="submit" value="Send">
+                </div>
             </form> 
         </section>
     </div>
