--- a/solution/index.html
+++ b/solution/index.html
@@ -38,20 +38,20 @@
                     <div>
                         <p>Movie Type</p>
                         <input type="checkbox" name="type1" id="Comedy" value="Comedy">
-                        <label for="Comedy">Comedy</label>
+                        <label for="Comedy">Comedy</label><br>
                         <input type="checkbox" name="type2" id="Action" value="Action">
-                        <label for="Action">Action</label>
+                        <label for="Action">Action</label><br>
                         <input type="checkbox" name="type3" id="Romance" value="Romance">
-                        <label for="Romance">Romance</label>
+                        <label for="Romance">Romance</label><br>
                     </div>
                     <div>
                         <p>Gender</p>
                         <input type="radio" name="gender" id="gender" value="Male">
-                        <label for="gender">Male</label>
+                        <label for="gender">Male</label><br>
                         <input type="radio" name="gender" id="gender" value="Female">
-                        <label for="gender">Female</label>
+                        <label for="gender">Female</label><br>
                         <input type="radio" name="gender" id="gender" value="Other">
-                        <label for="gender">Other</label>
+                        <label for="gender">Other</label><br>
                     </div>
                 </div>
                 <div class="box">
