--- a/solution/index.html
+++ b/solution/index.html
@@ -5,65 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Survey Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body id="container">
+    <img src="../background_image.jpg" alt="Netflix" width="100%" height="100%">
     <div id="title">
-        <header id="description">
-            <h1 class="netflix"><span class="net">NET</span>FLİX</h1>
-            <p>Thank you for singning up at Netflix. Tell us more about yourself</p>
-        </header>
-        <section id="survey-form">
-            <form action="result.html" method="get">
-                <div class="box">
-                        <label for="name">Name</label><br>
-                        <input type="text" id="name" name="name" placeholder="Enter Your Name"><br>
-                        <label for="age">Age</label><br>
-                        <input type="text" id="age" name="age" placeholder="Age" ><br>
-                        <label for="Email">Email</label><br>
-                        <input type="text" id="Email" name="Email" placeholder="Enter Your email" ><br>
-                    
-                </div>
-                <div class="box">
-                        <label for="series">Content type</label>
+        <div class="container2">
+            <header id="description">
+                <h1 class="netflix"><span class="net">NET</span>FLİX</h1>
+                <p>Thank you for singning up at Netflix. Tell us more about yourself</p>
+            </header>
+            <section id="survey-form">
+                <form action="result.html" method="get">
+                    <div class="box">
+                            <label for="name">Name</label><br>
+                            <input type="text" id="name" name="name" placeholder="Enter Your Name"><br>
+                            <label for="age">Age</label><br>
+                            <input type="text" id="age" name="age" placeholder="Age" ><br>
+                            <label for="Email">Email</label><br>
+                            <input type="text" id="Email" name="Email" placeholder="Enter Your email" ><br>
+                        
+                    </div>
+                    <div class="box">
+                            <label for="series">Content type</label>
+                            <br>
+                            <select name="series" id="series" size="1">
+                                <option selected disabled hidden>Series</option>
+                                <option value="Documentary">Documentary</option>
+                                <option value="TV-Shows">TV Shows</option>
+                                <option value="Movies">Movies</option>
+                                <option value="Netflix-Originals">Netflix Originals</option>
+                            </select>
+                    </div>
+                    <div class="box">
+                        <div>
+                            <p>Movie Type</p>
+                            <input type="checkbox" name="type1" id="Comedy" value="Comedy">
+                            <label for="Comedy">Comedy</label><br>
+                            <input type="checkbox" name="type2" id="Action" value="Action">
+                            <label for="Action">Action</label><br>
+                            <input type="checkbox" name="type3" id="Romance" value="Romance">
+                            <label for="Romance">Romance</label><br>
+                        </div>
+                        <div>
+                            <p>Gender</p>
+                            <input type="radio" name="gender" id="gender" value="Male">
+                            <label for="gender">Male</label><br>
+                            <input type="radio" name="gender" id="gender" value="Female">
+                            <label for="gender">Female</label><br>
+                            <input type="radio" name="gender" id="gender" value="Other">
+                            <label for="gender">Other</label><br>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <label for="feedback">Feedback</label>
                         <br>
-                        <select name="series" id="series" size="1">
-                            <option selected disabled hidden>Series</option>
-                            <option value="Documentary">Documentary</option>
-                            <option value="TV-Shows">TV Shows</option>
-                            <option value="Movies">Movies</option>
-                            <option value="Netflix-Originals">Netflix Originals</option>
-                        </select>
-                </div>
-                <div class="box">
-                    <div>
-                        <p>Movie Type</p>
-                        <input type="checkbox" name="type1" id="Comedy" value="Comedy">
-                        <label for="Comedy">Comedy</label><br>
-                        <input type="checkbox" name="type2" id="Action" value="Action">
-                        <label for="Action">Action</label><br>
-                        <input type="checkbox" name="type3" id="Romance" value="Romance">
-                        <label for="Romance">Romance</label><br>
+                        <textarea  name="Feedback" id="feedback" placeholder="any comment"></textarea>
                     </div>
-                    <div>
-                        <p>Gender</p>
-                        <input type="radio" name="gender" id="gender" value="Male">
-                        <label for="gender">Male</label><br>
-                        <input type="radio" name="gender" id="gender" value="Female">
-                        <label for="gender">Female</label><br>
-                        <input type="radio" name="gender" id="gender" value="Other">
-                        <label for="gender">Other</label><br>
+                    <div class="box">
+                        <input type="submit" value="Send">
                     </div>
-                </div>
-                <div class="box">
-                    <label for="feedback">Feedback</label>
-                    <br>
-                    <textarea  name="Feedback" id="feedback" placeholder="any comment"></textarea>
-                </div>
-                <div class="box">
-                    <input type="submit" value="Send">
-                </div>
-            </form> 
-        </section>
+                </form> 
+            </section>
+        </div>
     </div>
 </body>
 </html>
