--- a/solution/index.html
+++ b/solution/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="container">
-    <img src="../background_image.jpg" alt="Netflix" width="100%" height="100%">
+    <img src="../background_image.jpg" alt="Netflix" width="1260px" height="880px">
     <div id="title">
         <div class="container2">
             <header id="description">
