--- a/solution/index.html
+++ b/solution/index.html
@@ -19,17 +19,17 @@
                 <form action="result.html" method="get">
                     <div class="box">
                             <label for="name">Name</label><br>
-                            <input type="text" id="name" name="name" placeholder="Enter Your Name"><br>
+                            <input type="text" id="name" name="name" placeholder="Enter Your Name" class="box2"><br>
                             <label for="age">Age</label><br>
-                            <input type="text" id="age" name="age" placeholder="Age" ><br>
+                            <input type="text" id="age" name="age" placeholder="Age" class="box2"><br>
                             <label for="Email">Email</label><br>
-                            <input type="text" id="Email" name="Email" placeholder="Enter Your email" ><br>
+                            <input type="text" id="Email" name="Email" placeholder="Enter Your email"class="box2" ><br>
                         
                     </div>
-                    <div class="box">
+                    <div class="box" >
                             <label for="series">Content type</label>
                             <br>
-                            <select name="series" id="series" size="1">
+                            <select name="series" id="series" size="1" class="box2">
                                 <option selected disabled hidden>Series</option>
                                 <option value="Documentary">Documentary</option>
                                 <option value="TV-Shows">TV Shows</option>
@@ -38,32 +38,30 @@
                             </select>
                     </div>
                     <div class="box">
-                        <div>
-                            <p>Movie Type</p>
-                            <input type="checkbox" name="type1" id="Comedy" value="Comedy">
-                            <label for="Comedy">Comedy</label><br>
-                            <input type="checkbox" name="type2" id="Action" value="Action">
-                            <label for="Action">Action</label><br>
-                            <input type="checkbox" name="type3" id="Romance" value="Romance">
-                            <label for="Romance">Romance</label><br>
-                        </div>
-                        <div>
-                            <p>Gender</p>
-                            <input type="radio" name="gender" id="gender" value="Male">
-                            <label for="gender">Male</label><br>
-                            <input type="radio" name="gender" id="gender" value="Female">
-                            <label for="gender">Female</label><br>
-                            <input type="radio" name="gender" id="gender" value="Other">
-                            <label for="gender">Other</label><br>
-                        </div>
+                        <p>Movie Type</p>
+                        <input type="checkbox" name="type1" id="Comedy" value="Comedy">
+                        <label for="Comedy">Comedy</label><br>
+                        <input type="checkbox" name="type2" id="Action" value="Action">
+                        <label for="Action">Action</label><br>
+                        <input type="checkbox" name="type3" id="Romance" value="Romance">
+                        <label for="Romance">Romance</label><br>
+                    </div>
+                    <div class="box">
+                        <p>Gender</p>
+                        <input type="radio" name="gender" id="gender" value="Male">
+                        <label for="gender">Male</label><br>
+                        <input type="radio" name="gender" id="gender" value="Female">
+                        <label for="gender">Female</label><br>
+                        <input type="radio" name="gender" id="gender" value="Other">
+                        <label for="gender">Other</label><br>
                     </div>
                     <div class="box">
                         <label for="feedback">Feedback</label>
                         <br>
                         <textarea  name="Feedback" id="feedback" placeholder="any comment"></textarea>
                     </div>
-                    <div class="box">
-                        <input type="submit" value="Send">
+                    <div class="box4">
+                        <input type="submit" value="Send" class="button">
                     </div>
                 </form> 
             </section>
