--- a/solution/index.html
+++ b/solution/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="container">
-    <img src="../background_image.jpg" alt="Netflix" width="1260px" height="880px">
+    <img src="../background_image.jpg" alt="Netflix" width="1440px" height="880px">
     <div id="title">
         <div class="container2">
             <header id="description">
@@ -30,7 +30,7 @@
                             <label for="series">Content type</label>
                             <br>
                             <select name="series" id="series" size="1" class="box2">
-                                <option selected disabled hidden>Series</option>
+                                <option value="Series" selected disabled hidden>Series</option>
                                 <option value="Documentary">Documentary</option>
                                 <option value="TV-Shows">TV Shows</option>
                                 <option value="Movies">Movies</option>
