--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Lobster&family=Sorts+Mill+Goudy:ital@1&display=swap" rel="stylesheet">
 </head>
 <body id="container">
-    <img src="../background_image.jpg" alt="Netflix" width="1440px" height="880px">
+    <img src="./background_image.jpg" alt="Netflix" width="1440px" height="880px">
     <div id="title">
         <div class="container2">
             <header id="description">
